Fixed Prompts Being Too Long

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,7 @@ a:active {
 
 #prompt {
     position: relative;
-    height: 200px;
-    top: 20px;
+    height: fit-content;
     text-align: center;
     font-size: 24px;
     font-weight: bold;
